# php_lib

./: .gitignore  LICENSE  README.md  UPDATE.md  changelog.txt  composer.json  update.txt
class/: class_apns.php  class_blogger.php  class_file.php  class_ftp.php  class_imap.php  class_mail.php  class_mobile.php  class_mysql.php  class_qr.php  class_rakutenAPI.php  class_rss.php  class_session.php  class_socket.php  class_system.php  class_template.php  class_wikipediaAPI.php  class_yahooAPI.php
conf/: conf_define.php  conf_word.php
exe/: download.php
exe/emoji_unicode/: test_emoji.php  test_emoji_ssi.html
exe/kakasi-2.3.4/: ChangeLog  Makefile.am  Makefile.in  THANKS  TODO  aclocal.m4  config.h.in  configure  configure.in  kakasi.spec  kakasidict  ltmain.sh
exe/kakasi-2.3.4/lib/: Makefile.am  Makefile.in  libkakasi.h  makefile.msc.in
exe/kakasi-2.3.4/src/: 78_83.c  Makefile.am  Makefile.in  a2.c  atoc-conv.c  conv-util.c  conv-util.h  dict.c  ee2.c  g2.c  getopt.c  hh2.c  itaiji.c  j2.c  jj2.c  k2.c  kakasi.c  kakasi.h  kanjiio.c  kk2.c  mkkanwa.c  rdic-conv.c  wx2-conv.c
exe/qr_img0.50i/: README-e.txt
func/: func_agent.php  func_html.php  func_language.php  func_php.php  func_security.php  func_system.php
src/: init_lib.php
src/class/: class_CSRF.php  class_amazonAPI.php  class_apns.php  class_blogger.php  class_calender.php  class_cookie.php  class_email.php  class_facebook.php  class_file.php  class_flickrAPI.php  class_form.php  class_ftp.php  class_gcm.php  class_html.php  class_image.php  class_imap.php  class_mail.php  class_mobile.php  class_moshimoAPI.php  (+21 more)
(+23 files in other folders)
