dnl Process this file with autoconf to produce a configure script.
dnl $Id: configure.in,v 1.7 2001/08/09 07:48:12 rug Exp $

AC_INIT(src/kakasi.c)
AC_PREREQ(2.13)
AM_INIT_AUTOMAKE(kakasi, 2.3.4)

AM_MAINTAINER_MODE

dnl Checks for programs.
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_MAKE_SET

if test -n "$GCC"; then
    CFLAGS="$CFLAGS -Wall -Wunused -Wuninitialized -Wmissing-prototypes -Wmissing-declarations -pedantic"
fi

dnl OS specific.
AC_EXEEXT
AC_OBJEXT

dnl AC_DISABLE_SHARED
dnl AC_LIBTOOL_WIN32_DLL
AC_PROG_LIBTOOL

dnl Checks for libraries.
dnl Replace `main' with a function in -le:
AC_CHECK_LIB(e, main)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(malloc.h string.h strings.h)

dnl Checks for typedefs, structures, and compiler characteristics.
dnl AC_C_CHAR_UNSIGNED

dnl Checks for library functions.
AC_CHECK_FUNCS(memmove)

AC_MSG_CHECKING(for wakatigaki)
AC_ARG_ENABLE(wakatigaki,
[  --enable-wakatigaki     wakatigaki [default=yes]])
if test "${enable_wakatigaki+set}" != set; then
  wakatigaki=yes
else
  case "${enable_wakatigaki}" in
    yes) wakatigaki=yes ;;
    no) wakatigaki=no ;;
  esac
fi
AC_MSG_RESULT($wakatigaki)
test "${wakatigaki}" = yes && AC_DEFINE(WAKATIGAKI, 1, [WAKATIGAKI])

AM_CONFIG_HEADER(config.h)
AC_OUTPUT([src/Makefile
	   lib/Makefile
	   lib/makefile.msc
	   Makefile
	   kakasi-config
	   kakasi.spec
	  ],
	  [chmod +x kakasi-config])

# Local Variables:
# mode:shell-script
# sh-indentation:2
# End:
